labs/lab4/ingress-tls-app.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: ingress-tls-app
  namespace: 4labs
spec:
  rules:
  - host: lab-app.domain.net
    http:
      paths:
      - backend:
          serviceName: app
          servicePort: 8080
        path: /
  tls:
  - hosts:
    - lab-app.domain.net
    secretName: certificado1-domain-tls
